Hook __system_property_read_callback & Riru v22

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-/.externalNativeBuild
-/build
-/libs
-/obj
-/release
-/magisk-module/system
-/magisk-module/*.zip
 *.iml
+.gradle
+/local.properties
+.idea
+/.idea/caches/build_file_checksums.ser
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/build
+/captures
+/out
+.externalNativeBuild
+.cxx
